--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="list_item_inner_margin">4dp</dimen>
     <dimen name="list_item_text_size">18dp</dimen>
     <dimen name="list_item_album_size">16dp</dimen>
+    <dimen name="player_button_side">100dp</dimen>
+    <dimen name="player_image_side">300dp</dimen>
 </resources>
