--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="placeholder_bk">#ccc</color>
+    <color name="secondary_bk">#3A404C</color>
 </resources>
